--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>ICONÍCAS REMERAS - Football Heritage</title>
+    <title>ICONICAS REMERAS - Football Heritage</title>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <style>
         :root {
@@ -17,69 +17,66 @@
             padding: 0;
             font-family: 'Poppins', sans-serif;
             color: white;
-            /* EFECTO FOCO DE ESTADIO: Verde oscuro al centro, negro a los bordes */
             background: radial-gradient(circle at center, #0f200f 0%, var(--fondo-oscuro) 100%);
             background-attachment: fixed;
             min-height: 100vh;
         }
 
         header {
-            padding: 60px 20px 40px;
+            padding: 50px 20px 30px;
             text-align: center;
         }
 
         h1 {
             font-family: 'Bebas Neue', cursive;
-            font-size: 6em;
+            font-size: 4.5em;
             margin: 0;
-            letter-spacing: 5px;
+            letter-spacing: 3px;
             color: #fff;
-            line-height: 0.8;
+            line-height: 0.9;
             text-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
         }
 
         .s {
             color: #f1c40f;
             text-transform: uppercase;
-            letter-spacing: 6px;
+            letter-spacing: 4px;
             font-weight: 700;
-            font-size: 1em;
-            margin-top: 15px;
+            font-size: 0.9em;
+            margin-top: 10px;
         }
 
         .g {
             display: grid;
             grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-            gap: 30px;
+            gap: 25px;
             padding: 20px 20px 160px;
             max-width: 1200px;
             margin: 0 auto;
         }
 
-        /* TARJETA CON EFECTO PROFUNDIDAD */
         .p {
             background: rgba(20, 20, 20, 0.8);
             border: 1px solid rgba(255, 255, 255, 0.05);
             border-radius: 20px;
-            padding: 25px;
+            padding: 20px;
             text-align: center;
-            transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+            transition: 0.3s ease;
             box-shadow: 0 10px 30px rgba(0,0,0,0.5);
         }
 
         .p:hover {
             border-color: var(--verde-neon);
-            transform: translateY(-10px);
-            box-shadow: 0 0 30px var(--verde-glow);
-            background: rgba(30, 30, 30, 0.9);
+            transform: translateY(-5px);
+            box-shadow: 0 0 25px var(--verde-glow);
         }
 
         .img-container {
             width: 100%;
-            height: 240px;
+            height: 230px;
             background: #000;
             border-radius: 15px;
-            margin-bottom: 20px;
+            margin-bottom: 15px;
             display: flex;
             align-items: center;
             justify-content: center;
@@ -89,13 +86,13 @@
 
         .p img { width: 95%; height: 95%; object-fit: contain; }
 
-        h3 { font-family: 'Bebas Neue'; font-size: 2.2em; margin: 10px 0; letter-spacing: 1px; }
+        h3 { font-family: 'Bebas Neue'; font-size: 2em; margin: 10px 0; }
 
         .v {
             color: var(--verde-neon);
             font-weight: 700;
-            font-size: 1.8em;
-            margin-bottom: 20px;
+            font-size: 1.7em;
+            margin-bottom: 15px;
             display: block;
         }
 
@@ -103,25 +100,23 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            gap: 20px;
+            gap: 15px;
         }
 
         .b {
             background: transparent;
             color: white;
             border: 2px solid var(--verde-neon);
-            width: 45px;
-            height: 45px;
+            width: 40px;
+            height: 40px;
             border-radius: 50%;
-            font-size: 22px;
+            font-size: 20px;
             font-weight: bold;
             cursor: pointer;
-            transition: 0.3s;
         }
 
-        .b:hover { background: var(--verde-neon); color: black; box-shadow: 0 0 15px var(--verde-neon); }
+        .b:hover { background: var(--verde-neon); color: black; }
 
-        /* BARRA INFERIOR PREMIUM */
         .f {
             position: fixed;
             bottom: 0;
@@ -129,22 +124,20 @@
             background: rgba(0, 0, 0, 0.95);
             backdrop-filter: blur(10px);
             border-top: 2px solid var(--verde-neon);
-            padding: 30px 0;
+            padding: 25px 0;
             display: flex;
             justify-content: center;
             align-items: center;
-            gap: 40px;
+            gap: 30px;
             z-index: 1000;
         }
 
         #T {
-            font-size: 2.5em;
+            font-size: 2.2em;
             font-weight: 700;
             color: white;
-            min-width: 150px;
-            text-align: center;
             background: #111;
-            padding: 5px 25px;
+            padding: 5px 20px;
             border-radius: 10px;
             border: 1px solid #333;
         }
@@ -153,29 +146,25 @@
             background: var(--verde-neon);
             color: black;
             border: none;
-            padding: 18px 50px;
+            padding: 15px 40px;
             border-radius: 50px;
             font-weight: 800;
-            font-size: 1.2em;
             text-transform: uppercase;
             cursor: pointer;
-            transition: 0.3s;
         }
 
-        .fin:hover { transform: scale(1.05); box-shadow: 0 0 25px var(--verde-neon); }
-
         #m { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.98); align-items: center; justify-content: center; z-index: 2000; }
-        .x { background: #111; padding: 40px; border-radius: 25px; border: 2px solid var(--verde-neon); width: 90%; max-width: 400px; text-align: center; }
+        .x { background: #111; padding: 35px; border-radius: 20px; border: 2px solid var(--verde-neon); width: 85%; max-width: 400px; text-align: center; }
     </style>
 </head>
 <body>
 
 <header>
-    <h1 style="font-size: 4.5em;">ICONICAS REMERAS</h1>
+    <h1>ICONICAS REMERAS</h1>
     <div class="s">Football Heritage - Campana</div>
 </header>
 
-<div class="g" id="G">Preparando el equipo...</div>
+<div class="g" id="G">Preparando el vestuario...</div>
 
 <div class="f">
     <div id="T">$0</div>
@@ -184,14 +173,14 @@
 
 <div id="m">
     <div class="x">
-        <h2 style="font-family:'Bebas Neue'; color:var(--verde-neon); font-size: 3.5em; margin:0;">Pedido</h2>
-        <p id="R" style="color:#bbb; margin: 25px 0; text-align: left; font-size: 1.1em;"></p>
-        <div style="background:#1a1a1a; padding:20px; border-radius:15px; margin: 25px 0; border: 1px dashed #444;">
-            <small style="color: #f1c40f; letter-spacing: 2px;">ALIAS:</small><br>
-            <b style="font-size: 1.4em;">ICONICAS.REMERAS</b>
+        <h2 style="font-family:'Bebas Neue'; color:var(--verde-neon); font-size: 3em; margin:0;">Pedido</h2>
+        <p id="R" style="color:#bbb; margin: 20px 0; text-align: left;"></p>
+        <div style="background:#1a1a1a; padding:15px; border-radius:12px; margin: 20px 0; border: 1px dashed #444;">
+            <small style="color: #f1c40f;">ALIAS PARA PAGAR:</small><br>
+            <b style="font-size: 1.3em;">ICONICAS.REMERAS</b>
         </div>
-        <button onclick="finalizarTodo()" style="background:var(--verde-neon); color:black; border:none; padding:20px; width:100%; border-radius:15px; font-weight:800; font-size: 1.2em; cursor:pointer;">ENVIAR A WHATSAPP</button>
-        <p onclick="document.getElementById('m').style.display='none'" style="margin-top:25px; cursor:pointer; color: #555; text-decoration: underline;">Volver al catálogo</p>
+        <button onclick="finalizarTodo()" style="background:var(--verde-neon); color:black; border:none; padding:18px; width:100%; border-radius:10px; font-weight:800; cursor:pointer;">ENVIAR A WHATSAPP</button>
+        <p onclick="document.getElementById('m').style.display='none'" style="margin-top:20px; cursor:pointer; color: #444; text-decoration: underline;">Volver</p>
     </div>
 </div>
 
@@ -204,13 +193,14 @@
 
     async function cargarMenu() {
         try {
-            const res = await fetch(urlScript);
+            // AJUSTE DE SEGURIDAD (CORS)
+            const res = await fetch(urlScript, { method: 'GET' });
             const datos = await res.json();
             const productos = datos.lista; 
             const h = document.getElementById('G');
             h.innerHTML = "";
             productos.forEach(p => {
-                const imgTag = p.img ? `<img src="${p.img}">` : `<div style="color:#222; font-family:'Bebas Neue'; font-size:1.5em">ICONICAS</div>`;
+                const imgTag = p.img ? `<img src="${p.img}">` : `<div style="color:#333; font-weight:bold">ICONICAS</div>`;
                 h.innerHTML += `
                     <div class="p" data-n="${p.nombre}" data-p="${p.precio}">
                         <div class="img-container">${imgTag}</div>
@@ -218,12 +208,15 @@
                         <div class="v">$${parseInt(p.precio).toLocaleString()}</div>
                         <div class="controles">
                             <button class="b" onclick="U(this,-1)">-</button>
-                            <b class="c" style="width:40px; font-size:1.6em">0</b>
+                            <b class="c" style="width:35px; font-size:1.4em">0</b>
                             <button class="b" onclick="U(this,1)">+</button>
                         </div>
                     </div>`;
             });
-        } catch (e) { document.getElementById('G').innerHTML = "Error de conexión."; }
+        } catch (e) { 
+            console.error(e);
+            document.getElementById('G').innerHTML = "Error al conectar. Verifica los permisos del Script."; 
+        }
     }
 
     function U(b, v) {
@@ -238,7 +231,7 @@
     }
 
     function V() {
-        if (!totalGlobal) return alert("Elegí al menos una remera");
+        if (!totalGlobal) return alert("Elegí algo primero");
         let p = [];
         document.querySelectorAll('.p').forEach(i => {
             let cant = i.querySelector('.c').innerText;
@@ -250,7 +243,7 @@
     }
 
     async function finalizarTodo() {
-        const msj = encodeURIComponent("¡Hola! Pedido de ICONICAS:\n\n" + textoGlobal + "\n\nTotal: $" + totalGlobal);
+        const msj = encodeURIComponent("¡Hola! Quiero estas remeras de ICONICAS:\n\n" + textoGlobal + "\n\nTotal: $" + totalGlobal);
         window.open("https://wa.me/" + telWhatsApp + "?text=" + msj);
     }
 
